feat(edge): retention unification, capacity sizing, HSE-1 hardening, psp_id schema-parity fix
Edge installer/distribution work (retention days as single source of truth
across aerospike.conf/install.sh/.env.example, TPS-driven capacity sizing,
--edge-image override, ARM native CI runner) plus this session's live-tested
fix: EdgeRuleInterpreter.validateBundle() now requires psp_id/rule id+name/
condition-tree fields matching the Rust RuleBundle struct exactly, and
EdgeEngine.loadVerifiedBundle() runs that check before ever calling native,
so rejection messages are specific regardless of which evaluator is active.
EdgeRuleInterpreterValidationTest (7 tests) plus updated
EdgeEngineNativeRoutingTest cover it; re-verified against a live node with
real Aerospike (ALLOW/ALERT/HOLD/BLOCK, severity-max, additive scoring,
velocity round-trip all confirmed).